CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(qtxpl)

FIND_PACKAGE( Qt4 REQUIRED )
SET(QT_USE_QTNETWORK TRUE)
INCLUDE( ${QT_USE_FILE} )

SET( QTXPL_SRCS
	xpldevice.cpp
	xplinstance.cpp
	xplmessage.cpp
)

SET( QTXPL_HDRS
	xpldevice.h
)

SET( QTXPL_MOC_HDRS
	xplinstance.h
	xplmessage.h
)


QT4_WRAP_CPP(  QTXPL_MOC_SRCS  ${QTXPL_MOC_HDRS} )
QT4_AUTOMOC (  ${QTXPL_SRCS} )


SET( QTXPL_LIBRARIES
	${QT_LIBRARIES}
)

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_NO_DEBUG)

ADD_LIBRARY("qtxpl" SHARED
	${QTXPL_SRCS}
	${QTXPL_HDRS}
	${QTXPL_MOC_HDRS}
	${QTXPL_MOC_SRCS}
)

TARGET_LINK_LIBRARIES( "qtxpl" ${QTXPL_LIBRARIES} )

