
SET(BUILD_EXTENSION_JAVA	FALSE	CACHE BOOL "Build extension for Java")
IF(BUILD_EXTENSION_JAVA)
	ADD_SUBDIRECTORY(java)
ENDIF(BUILD_EXTENSION_JAVA)

# ADD_SUBDIRECTORY(php)

SET(BUILD_EXTENSION_PYTHON	FALSE	CACHE BOOL "Build extension for Python")
IF(BUILD_EXTENSION_PYTHON)
	ADD_SUBDIRECTORY(python)
ENDIF(BUILD_EXTENSION_PYTHON)

# ADD_SUBDIRECTORY(ruby)

